updating plugins and tests

--- a/test/backfilljs.html
+++ b/test/backfilljs.html
@@ -19,9 +19,9 @@
 <body>
   <div id="qunit"></div>
   <div id="qunit-fixture">
-    <span>lame test markup</span>
-    <span>normal test markup</span>
-    <span>awesome test markup</span>
+    <span>Element 1</span>
+    <span>Element 2</span>
+    <span>Element 3</span>
   </div>
 </body>
 </html>
